add test and change Product services